--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <header class="masthead">
         <div class="container">
             <div class="masthead-subheading">We treat you like our family</div>
-            <div class="masthead-heading text-uppercase">Professional Dental Center</div>
+            <div class="masthead-heading text-uppercase">PDC Dental Center</div>
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Contact Us</a>
         </div>
     </header>
