--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>PDC Dental Center</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/5ea81b718e.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet"
@@ -221,43 +221,59 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
-            <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                <div class="row align-items-stretch mb-5">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input class="form-control" id="name" type="text" placeholder="Your Name *"
-                                required="required" data-validation-required-message="Please enter your name." />
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" id="email" type="email" placeholder="Your Email *"
-                                required="required"
-                                data-validation-required-message="Please enter your email address." />
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div class="form-group mb-md-0">
-                            <input class="form-control" id="phone" type="tel" placeholder="Your Phone *"
-                                required="required"
-                                data-validation-required-message="Please enter your phone number." />
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group form-group-textarea mb-md-0">
-                            <textarea class="form-control" id="message" placeholder="Your Message *" required="required"
-                                data-validation-required-message="Please enter a message."></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
+            <div class="row">
+                <div class="col-lg-6 text-center">
+                    <h5>ศูนย์ทันตกรรม พี ดี ซี สาขางามวงศ์วาน</h5>
+                    <p class="text-muted">บริษัท โปรเฟสชั่นแนล เดนตัล เซ็นเตอร์ จำกัด<br>
+                        425 อาคารพาณิชย์ ตรงข้ามเดอะมอลล์<br>
+                        ถ.งามวงศ์วาน ต.บางเขน อ.เมือง จ.นนทบุรี 11000<br>
+                        โทร : (66) 2952 7475-6<br>
+                        โทรสาร : (66) 2952 7476<br>
+                        เวลาทำการ : จ.-อา. 10.00-20.00 น.<br></p>
+                    <h5>PDC Dental Center, Ngamwongwan Branch</h5>
+                    <p class="text-muted">Professional Dental Center Company Limited<br>
+                        425 Ngamwongwan Road,<br>
+                        Bangkaen, Muang District, Nonthaburi 11000<br>
+                        Tel : (66) 2952 7475-6<br>
+                        Fax : (66) 2952 7476<br>
+                        Office Hour : Mon.-Sun. 10.00 am.-8.00 pm.<br></p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3873.704478130872!2d100.54021371298018!3d13.856769390279556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29cbb1795ad77%3A0x3536be6f6a9cdc4!2z4Lio4Li54LiZ4Lii4LmM4LiX4Lix4LiZ4LiV4LiB4Lij4Lij4Lih4oCLIOC4nuC4teKAi-C4lOC4teKAi-C4i-C4teKAiyBQREMgRGVudGFsIENlbnRlcg!5e0!3m2!1sen!2sth!4v1600207468543!5m2!1sen!2sth"
+                        width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
+                    <div class="pt-3 my-2 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="tel:6629527475"><i class="fas fa-phone"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/pdcdentalcenter"><i
+                                class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
-                <div class="text-center">
-                    <div id="success"></div>
-                    <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send
-                        Message</button>
+                <div class="col-lg-6 text-center">
+                    <h5>ศูนย์ทันตกรรม พี ดี ซี สาขาบางนา</h5>
+                    <p class="text-muted">บริษัท เด็นตัล เซ็นเตอร์ จำกัด<br>
+                        1091 ห้อง 521 บี เซ็นทรัลซิตี้ บางนา ชั้น 5<br>
+                        ถ.บางนา-ตราด แขวงบางนา เขตบางนา กรุงเทพฯ 10260<br>
+                        โทร : (66) 2361 0853, (08) 6328 4285<br>
+                        โทรสาร : (66) 2361 0853<br>
+                        เวลาทำการ : จ.-อา. 10.30-20.00 น., ส.-อา. 10.00-20.00 น.<br></p>
+                    <h5>PDC Dental Center, Bangna Branch</h5>
+                    <p class="text-muted">Dental Center Company Limited<br>
+                        1091 Room#521B, Central City Bangna, 5th Floor,<br>
+                        Bangna-Trad Road, Bangna District, Bangkok 10260<br>
+                        Tel : (66) 2361 0853, (08) 6328 4285<br>
+                        Fax : (66) 2361 0853<br>
+                        Office Hour : Mon.-Fri. 10.30 am.-8.00 pm., Sat.-Sun. 10.00 am.-8.00 pm.<br></p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3876.8041968287675!2d100.634711!3d13.669667!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe3edda3d25621172!2z4LmA4LiL4LmH4LiZ4LiX4Lij4Lix4Lil4Lie4Lil4Liy4LiL4LiyIOC4muC4suC4h-C4meC4sg!5e0!3m2!1sth!2sth!4v1600208026273!5m2!1sth!2sth"
+                        width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
+                    <div class="pt-3 my-2 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="tel:6623610853"><i class="fas fa-phone"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="tel:66863284285"><i
+                                class="fas fa-mobile-alt"></i></a>
+                    </div>
                 </div>
-            </form>
+            </div>
         </div>
     </section>
     <!-- Footer-->
