--- a/index.html
+++ b/index.html
@@ -54,35 +54,142 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Services</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="my-3">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+            <div class="accordion" id="accordionExample">
+                <div class="card">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                                aria-expanded="true" aria-controls="collapseOne">
+                                ภาพถ่าย X-ray ระบบ Digital
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                        data-parent="#accordionExample">
+                        <div class="card-body p-0">
+                            <table class="table table-borderless">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>ภาพถ่ายรังสี 1 บริเวณ (Dental Film)</td>
+                                        <td>200฿</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>ภาพถ่ายรังสี Orthopantomogram</td>
+                                        <td>450฿</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>ภาพถ่ายรังสี Lateral Cephalogram</td>
+                                        <td>450฿</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="my-3">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                การอุดฟัน (Restoration) + ทันตกรรมตกแต่ง (Esthetic Dentistry)
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                        <div class="card-body p-0">
+                            <table class="table table-borderless">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>อุดฟันด้วยอมัลกัม 1 ด้าน</td>
+                                        <td>600-800฿</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>อุดฟันด้วยวัสดุสีเหมือนฟัน 1 ด้าน</td>
+                                        <td>750-1000฿</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>ชุดฟอกสีฟันที่บ้าน (Home Bleaching)</td>
+                                        <td>4500฿</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="my-3">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                การรักษาคลองรากฟัน (Root Canal Treatment)
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                        data-parent="#accordionExample">
+                        <div class="card-body p-0">
+                            <table class="table table-borderless">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>อุดฟันด้วยอมัลกัม 1 ด้าน</td>
+                                        <td>600-800฿</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>อุดฟันด้วยวัสดุสีเหมือนฟัน 1 ด้าน</td>
+                                        <td>750-1000฿</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>ชุดฟอกสีฟันที่บ้าน (Home Bleaching)</td>
+                                        <td>4500฿</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingFour">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                ศัลยกรรมช่องปาก (Oral Surgery) + รักษาโรคเหงือก (Periodontics)
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+                        data-parent="#accordionExample">
+                        <div class="card-body p-0">
+                            <table class="table table-borderless">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>อุดฟันด้วยอมัลกัม 1 ด้าน</td>
+                                        <td>600-800฿</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>อุดฟันด้วยวัสดุสีเหมือนฟัน 1 ด้าน</td>
+                                        <td>750-1000฿</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row"></th>
+                                        <td>ชุดฟอกสีฟันที่บ้าน (Home Bleaching)</td>
+                                        <td>4500฿</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -92,7 +199,6 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">About</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
             <ul class="timeline">
                 <li>
