--- a/index.html
+++ b/index.html
@@ -701,40 +701,82 @@
                                 <h5>การดูแลรักษาสุขภาพช่องปากและฟันของลูก</h5>
                                 <ul class="timeline">
                                     <li>
-                                        <h6>6 เดือน</h6>
-                                        <p>เช็ดปากลูกให้สะอาด เพื่อฟันน้ำนมจะได้ขึ้นในสิ่งแวดล้อมที่สะอาด
-                                            ควรใช้ที่กัดที่ทำจากยางให้เด็กกัดเล่น ไม่ควรใช้ที่กัดที่ทำจากแป้งหรือน้ำตาล
-                                        </p>
+                                        <div class="timeline-image">
+                                            <h3>
+                                                6 เดือน
+                                            </h3>
+                                        </div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-body">
+                                                <p class="text-muted">เช็ดปากลูกให้สะอาด
+                                                    เพื่อฟันน้ำนมจะได้ขึ้นในสิ่งแวดล้อมที่สะอาด
+                                                    ควรใช้ที่กัดที่ทำจากยางให้เด็กกัดเล่น
+                                                    ไม่ควรใช้ที่กัดที่ทำจากแป้งหรือน้ำตาล</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="timeline-inverted">
+                                        <div class="timeline-image"><img class="rounded-circle img-fluid"
+                                                src="assets/img/about/2.jpg" alt="" /></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                <h4>March 2011</h4>
+                                                <h4 class="subheading">An Agency is Born</h4>
+                                            </div>
+                                            <div class="timeline-body">
+                                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur
+                                                    adipisicing elit. Sunt ut
+                                                    voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam,
+                                                    recusandae sit vero
+                                                    unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            </div>
+                                        </div>
                                     </li>
                                     <li>
-                                        <h6>1 ปี</h6>
-                                        <p>ควรเช็ดในปากและฟันให้สะอาดด้วยผ้าก๊อซ หรือสำลี อาจใช้แปรงอันเล็กๆ
-                                            เริ่มแปรงฟันหน้าให้ลูก หยิบยื่นแปรงให้ลูกกัดเล่นเพื่อให้ลูกคุ้นเคยกับแปรง
-                                            และให้ลูกเลิกดื่มนมจากขวด
-                                        </p>
+                                        <div class="timeline-image"><img class="rounded-circle img-fluid"
+                                                src="assets/img/about/3.jpg" alt="" /></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                <h4>December 2012</h4>
+                                                <h4 class="subheading">Transition to Full Service</h4>
+                                            </div>
+                                            <div class="timeline-body">
+                                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur
+                                                    adipisicing elit. Sunt ut
+                                                    voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam,
+                                                    recusandae sit vero
+                                                    unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            </div>
+                                        </div>
                                     </li>
-                                    <li>
-                                        <h6>2 ปี</h6>
-                                        <p>ในช่วงนี้ใช้แปรงสีฟันแปรงบนฟันกราม และบริเวณฟันหน้าไปมาในแนวนอนเป็นช่วงสั้นๆ
-                                            โดยแปรงให้ทั่วทั้งด้านที่ติดริมฝีปาก และด้านที่อยู่ใกล้ลิ้น
-                                            เริ่มใช้ไหมขัดฟันทำความสะอาดบริเวณซอกฟัน
-                                            ยาสีฟันที่ใช้แค่แตะขนแปรงให้ชื้นเล็กน้อย และใช้ผ้าก๊อซเช็ดฟองออกหลังแปรง
-                                            ระยะนี้ควรได้รับปริมาณฟลูออไรด์ชนิดรับประทาน
-                                        </p>
+                                    <li class="timeline-inverted">
+                                        <div class="timeline-image"><img class="rounded-circle img-fluid"
+                                                src="assets/img/about/4.jpg" alt="" /></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                <h4>July 2014</h4>
+                                                <h4 class="subheading">Phase Two Expansion</h4>
+                                            </div>
+                                            <div class="timeline-body">
+                                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur
+                                                    adipisicing elit. Sunt ut
+                                                    voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam,
+                                                    recusandae sit vero
+                                                    unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            </div>
+                                        </div>
                                     </li>
-                                    <li>
-                                        <h6>6 เดือน</h6>
-                                        <p>เช็ดปากลูกให้สะอาด เพื่อฟันน้ำนมจะได้ขึ้นในสิ่งแวดล้อมที่สะอาด
-                                            ควรใช้ที่กัดที่ทำจากยางให้เด็กกัดเล่น ไม่ควรใช้ที่กัดที่ทำจากแป้งหรือน้ำตาล
-                                        </p>
+                                    <li class="timeline-inverted">
+                                        <div class="timeline-image">
+                                            <h4>
+                                                Be Part
+                                                <br />
+                                                Of Our
+                                                <br />
+                                                Story!
+                                            </h4>
+                                        </div>
                                     </li>
-                                    <li>
-                                        <h6>6 เดือน</h6>
-                                        <p>เช็ดปากลูกให้สะอาด เพื่อฟันน้ำนมจะได้ขึ้นในสิ่งแวดล้อมที่สะอาด
-                                            ควรใช้ที่กัดที่ทำจากยางให้เด็กกัดเล่น ไม่ควรใช้ที่กัดที่ทำจากแป้งหรือน้ำตาล
-                                        </p>
-                                    </li>
-
                                 </ul>
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
