--- a/index.html
+++ b/index.html
@@ -616,6 +616,13 @@
             </div>
             <div class="row">
                 <div class="py-4 col-lg-6 text-center">
+                    <div class="pb-3 my-2 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="tel:6629527475" target="_blank"><i
+                                class="fas fa-phone"></i></a>
+                        <a class="btn btn-dark btn-social mx-2"
+                            href="https://www.facebook.com/messages/t/pdcdentalcenter" target="_blank"><i
+                                class="fab fa-facebook-messenger"></i></a>
+                    </div>
                     <h5>ศูนย์ทันตกรรม พีดีซี สาขางามวงศ์วาน</h5>
                     <p class="text-muted">บริษัท โปรเฟสชั่นแนล เดนตัล เซ็นเตอร์ จำกัด<br>
                         425 อาคารพาณิชย์ ตรงข้ามเดอะมอลล์<br>
@@ -630,17 +637,18 @@
                         Tel : (66) 2952 7475-6<br>
                         Fax : (66) 2952 7476<br>
                         Office Hour : Mon.-Sun. 10.00 am.-8.00 pm.<br></p>
-                    <div class="pb-3 my-2 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="tel:6629527475"><i class="fas fa-phone"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/pdcdentalcenter"><i
-                                class="fab fa-facebook-f"></i></a>
-                    </div>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3873.704478130872!2d100.54021371298018!3d13.856769390279556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29cbb1795ad77%3A0x3536be6f6a9cdc4!2z4Lio4Li54LiZ4Lii4LmM4LiX4Lix4LiZ4LiV4LiB4Lij4Lij4Lih4oCLIOC4nuC4teKAi-C4lOC4teKAi-C4i-C4teKAiyBQREMgRGVudGFsIENlbnRlcg!5e0!3m2!1sen!2sth!4v1600207468543!5m2!1sen!2sth"
-                        width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
+                        width="400" height="300" frameborder="0" style="border:0; margin-top:0.5rem;" allowfullscreen=""
                         aria-hidden="false" tabindex="0"></iframe>
                 </div>
                 <div class="py-4 col-lg-6 text-center">
+                    <div class="pb-3 my-2 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="tel:6623610853" target="_blank"><i
+                                class="fas fa-phone"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="tel:66863284285" target="_blank"><i
+                                class="fas fa-mobile-alt"></i></a>
+                    </div>
                     <h5>ศูนย์ทันตกรรม พีดีซี สาขาบางนา</h5>
                     <p class="text-muted">บริษัท เด็นตัล เซ็นเตอร์ จำกัด<br>
                         1091 ห้อง 521 บี เซ็นทรัลซิตี้ บางนา ชั้น 5<br>
@@ -655,14 +663,9 @@
                         Tel : (66) 2361 0853, (08) 6328 4285<br>
                         Fax : (66) 2361 0853<br>
                         Office Hour : Mon.-Fri. 10.30 am.-8.00 pm., Sat.-Sun. 10.00 am.-8.00 pm.<br></p>
-                    <div class="pb-3 my-2 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="tel:6623610853"><i class="fas fa-phone"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="tel:66863284285"><i
-                                class="fas fa-mobile-alt"></i></a>
-                    </div>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3876.8041968287675!2d100.634711!3d13.669667!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe3edda3d25621172!2z4LmA4LiL4LmH4LiZ4LiX4Lij4Lix4Lil4Lie4Lil4Liy4LiL4LiyIOC4muC4suC4h-C4meC4sg!5e0!3m2!1sth!2sth!4v1600208026273!5m2!1sth!2sth"
-                        width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
+                        width="400" height="300" frameborder="0" style="border:0; margin-top:0.5rem;" allowfullscreen=""
                         aria-hidden="false" tabindex="0"></iframe>
 
                 </div>
@@ -699,12 +702,76 @@
                                     ฟันแท้ของคนเราจะมีทั้งหมด 32 ซี่ เราควรดูแลรักษาให้ดี
                                     เพราะฟันแท้จะอยู่กับเราไปตลอดชีวิต</p>
                                 <h5>การดูแลรักษาสุขภาพช่องปากและฟันของลูก</h5>
+                                <div class="timeline2">
+                                    <div class="timeline__group">
+                                        <div class="timeline__box">
+                                            <div class="timeline__date">
+                                                <span class="timeline__day">6</span>
+                                                <span class="timeline__month">เดือน</span>
+                                            </div>
+                                            <div class="timeline__post">
+                                                <div class="timeline__content">
+                                                    <p>เช็ดปากลูกให้สะอาด
+                                                        เพื่อฟันน้ำนมจะได้ขึ้นในสิ่งแวดล้อมที่สะอาด
+                                                        ควรใช้ที่กัดที่ทำจากยางให้เด็กกัดเล่น
+                                                        ไม่ควรใช้ที่กัดที่ทำจากแป้งหรือน้ำตาล</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="timeline__box">
+                                            <div class="timeline__date">
+                                                <span class="timeline__day">1</span>
+                                                <span class="timeline__month">Sept</span>
+                                            </div>
+                                            <div class="timeline__post">
+                                                <div class="timeline__content">
+                                                    <p>Started from University of Pennsylvania. This is an important
+                                                        stage of my career. Here I worked in the local magazine. The
+                                                        experience greatly affected me</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="timeline__group">
+                                        <span class="timeline__year">2014</span>
+                                        <div class="timeline__box">
+                                            <div class="timeline__date">
+                                                <span class="timeline__day">14</span>
+                                                <span class="timeline__month">Jul</span>
+                                            </div>
+                                            <div class="timeline__post">
+                                                <div class="timeline__content">
+                                                    <p>Travels to France, Italy, Spain, and Peru. After completing
+                                                        fashion editorial in Lima, prolongs stay to make portraits of
+                                                        local people in a daylight studio</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="timeline__group">
+                                        <span class="timeline__year">2016</span>
+                                        <div class="timeline__box">
+                                            <div class="timeline__date">
+                                                <span class="timeline__day">28</span>
+                                                <span class="timeline__month">Aug</span>
+                                            </div>
+                                            <div class="timeline__post">
+                                                <div class="timeline__content">
+                                                    <p>Upon moving to Brooklyn that summer, I began photographing
+                                                        weddings in Chicago</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <ul class="timeline">
                                     <li>
                                         <div class="timeline-image">
-                                            <h3>
-                                                6 เดือน
-                                            </h3>
+                                            <h4>
+                                                6<br>
+                                                เดือน
+                                            </h4>
                                         </div>
                                         <div class="timeline-panel">
                                             <div class="timeline-body">
