Edit accordian2 collapse

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                             </button>
                         </h5>
                     </div>
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne">
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion2">
                         <div class="card-body">
                             <p>ทันตแพทย์จะตรวจเช็คสุขภาพช่องปากและฟัน <b>เพื่อเฝ้าระวังโรค
                                     และจะได้ทำการรักษาหรือแก้ปัญหาได้แต่เนิ่นๆ</b> เพราะโรคในช่องปากหลายๆ
@@ -458,7 +458,7 @@
                             </button>
                         </h5>
                     </div>
-                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo">
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion2">
                         <div class="card-body">
                             <p> บ่อยครั้งที่หลายคนคิดว่า ฟันน้ำนมไม่จำเป็นต้องดูแล ไม่มีความสำคัญ
                                 อยู่ในปากชั่วระยะเวลาไม่กี่ปี แต่ความจริง ฟันน้ำนมเริ่มขึ้นตั้งแต่ 6-7 เดือน ไป ถึง 2
@@ -485,7 +485,7 @@
                             </button>
                         </h5>
                     </div>
-                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree">
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion2">
                         <div class="card-body">
                             <ul class="list-inline">
                                 <li>
@@ -530,7 +530,7 @@
                             </button>
                         </h5>
                     </div>
-                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour">
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion2">
                         <div class="card-body">
                             <p>โดยปกติแล้วหากไม่มีปัญหาที่ไม่คาดคิดเกิดขึ้น
                                 การจัดฟันมักดำเนินไปตามแผนการรักษาที่ได้วางไว้
@@ -577,7 +577,7 @@
                             </button>
                         </h5>
                     </div>
-                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive">
+                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion2">
                         <div class="card-body">
                             <p><b>คนไข้อายุแค่ไหนก็สามารถทำทันตกรรมรากเทียมได้</b>
                                 ถ้าตราบใดที่มีกระดูกขากรรไกรพอที่จะฝังรากเทียมเข้าไป ถ้าท่านมีโรคหรือสภาวะต่อไปนี้
